# Flowtask

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 60ab061c8245_create_email_verification_tokens_table.py  ec818b85b8f8_create_users_table.py
app/: database.py  main.py
app/api/v1/: auth.py
app/core/: config.py  database.py  email.py  security.py
app/models/: __init__.py  base.py  user.py
app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/repositories/: user_repository.py
app/services/: auth_service.py
